--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -16,8 +16,8 @@
 <body id="wasm-example">
 <script type="module">
     import init from "./pkg/wgpu_test.js";
-    window.addEventListener("load", () => {
-        init();
+    init().then(() => {
+        console.log("WASM Loaded");
     });
 </script>
 </body>
